--- a/package.json
+++ b/package.json
@@ -15,10 +15,14 @@
       "pg": "^8.2.1"
    },
    "scripts": {
-      "start": "nodemon src/server.js"
+      "start": "npm-run-all -p nodemon browsersync",
+      "nodemon": "nodemon src/server.js",
+      "browsersync": "browser-sync start --proxy http://localhost:5000/home/index --files 'public,src/app/views'"
    },
    "devDependencies": {
-      "nodemon": "^2.0.3"
+      "browser-sync": "^2.26.7",
+      "nodemon": "^2.0.3",
+      "npm-run-all": "^4.1.5"
    },
    "repository": {
       "type": "git",
