--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
       "pg": "^8.2.1"
    },
    "scripts": {
+      "debug": "nodemon --inspect=0.0.0.0:9229 src/server.js",
       "start": "npm-run-all -p nodemon browsersync",
       "nodemon": "nodemon src/server.js",
       "browsersync": "browser-sync start --proxy http://localhost:5000/home/index --files 'public,src/app/views'"
